Start configuration of the login and help page.

--- a/WebContent/Prototipo/index.html
+++ b/WebContent/Prototipo/index.html
@@ -41,7 +41,7 @@ document.addEventListener('DOMContentLoaded', function() {
       </ul>
       <nav>
         <div class="nav-wrapper">
-          <a href="#!" class="brand-logo">Protótipo</a>
+          <a href="#!" class="brand-logo">Study Management - Prototype</a>
           <ul class="right hide-on-med-and-down">
             <li><a href="sass.html">Sass</a></li>
             <li><a href="badges.html">Components</a></li>
@@ -57,6 +57,27 @@ document.addEventListener('DOMContentLoaded', function() {
           </ul>
         </div>
       </nav>
+      <div class="row">
+        <!-- Campo para inserir usuário -->
+        <div class="input-field col s12">
+          <i class="material-icons prefix">perm_identity</i>
+          <input id="login" type="text" class="validate">
+          <label for="login">Login"</label>
+        </div>
+        <!-- Campo para inserir senha-->
+        <div class="input-field col s12">
+          <i class="material-icons prefix">vpn_key</i>
+          <input id="password" type="password" class="validate">
+          <label for="password">Password</label>
+        </div>
+      </div>
+        <!-- Botão para entra no sistema -->
+        <div align="center">
+        <a align="center" class="waves-effect waves-light btn-large" href="ModelForm.html" title="Log in to the system">
+          <i class="material-icons right">send</i>Log in</a><br><br>
+          <a align="center" href="help-login.html" class="waves-effect waves-light">Log in options</a>
+        </div>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
