Customização na aparência de botões de ação

--- a/WebContent/w3school/index.html
+++ b/WebContent/w3school/index.html
@@ -90,28 +90,24 @@
 
     <section>
       <nav>
-        <div clas="row">
-
-        </div>
-
         <ul>
-          <li><a href="Use_Image.html" class="waves-effect waves-light btn-large" title="Atribtuto 'src'"><i class="material-icons left">home</i>The src Attribute</a></li>
-          <li><a id="mya" href="alt_attribute.html">The alt Attribute</a></li><br>
-          <li><a id="mya" href="size_attribute.html">Size Attribute</a></li><br>
-          <li><a id="mya" href="style_attribute.html">Style Attribute</a></li><br>
-          <li><a id="mya" href="about_use.html">About W3Schools</a></li><br>
-          <li><a id="mya" href="quotes.html">Single or Double Quotes?</a></li><br>
-          <li><a id="mya" href="bigger_headings.html">Bigger Headings</a></li><br>
-          <li><a id="mya" href="horizontal_rules.html">HTML Horizontal Rules</a></li><br>
-          <li><a id="mya" href="background_color.html">Background Color</a></li><br>
-          <li><a id="mya" href="text_formatting.html">HTML Text Formatting</a></li><br>
-          <li><a id="mya" href="quotation.html"> HTML Quotation and Citation Elements</a></li><br>
-          <li><a id="mya"href="comments.html">Comments</a></li><br>
-          <li><a id="mya"href="colors.html">Colors</a></li><br>
-          <li><a id="mya"href="css_styles_colors.html">Styling HTML with CSS</a></li><br>
-          <li><a id="mya"href="links.html">HTML Links - Hyperlinks</a></li><br>
-          <li><a id="mya"href="images.html">HTML Imagens</a></li><br>
-          <li><a id="mya"href="learning_list.html">Conteúdo de Aprendizado</a></li><br>
+          <li><a href="Use_Image.html" class="waves-effect waves-light btn-small" title="Atribtuto 'src'"><i class="material-icons left">home</i>The src Attribute</a></li><br>
+          <li><a href="alt_attribute.html" class="waves-effect waves-light btn-small" title="Atribtuto 'src'"><i class="material-icons left">home</i>The alt Attribute</a></li><br>
+          <li><a href="size_attribute.html" class="waves-effect waves-light btn-small" title="Atribtuto 'src'"><i class="material-icons left">home</i>Size Attribute</a></li><br>
+          <li><a href="style_attribute.html" class="waves-effect waves-light btn-small" title="Atribtuto 'src'"><i class="material-icons left">home</i>Style Attribute</a></li><br>
+          <li><a href="about_use.html" class="waves-effect waves-light btn-small" title="Atribtuto 'src'"><i class="material-icons left">home</i>About W3Schools</a></li><br>
+          <li><a href="quotes.html" class="waves-effect waves-light btn-small" title="Atribtuto 'src'"><i class="material-icons left">home</i>Single or Double Quotes?</a></li><br>
+          <li><a href="bigger_headings.html" class="waves-effect waves-light btn-small" title="Atribtuto 'src'"><i class="material-icons left">home</i>Bigger Headings</a></li><br>
+          <li><a href="horizontal_rules.html" class="waves-effect waves-light btn-small" title="Atribtuto 'src'"><i class="material-icons left">home</i>HTML Horizontal Rules</a></li><br>
+          <li><a href="background_color.html" class="waves-effect waves-light btn-small" title="Atribtuto 'src'"><i class="material-icons left">home</i>Background Color</a></li><br>
+          <li><a href="text_formatting.html" class="waves-effect waves-light btn-small" title="Atribtuto 'src'"><i class="material-icons left">home</i>HTML Text Formatting</a></li><br>
+          <li><a href="quotation.html"class="waves-effect waves-light btn-small" title="Atribtuto 'src'"><i class="material-icons left">home</i>HTML Quotation and Citation Elements</a></li><br>
+          <li><a href="comments.html" class="waves-effect waves-light btn-small" title="Atribtuto 'src'"><i class="material-icons left">home</i>Comments</a></li><br>
+          <li><a href="colors.html" class="waves-effect waves-light btn-small" title="Atribtuto 'src'"><i class="material-icons left">home</i>Colors</a></li><br>
+          <li><a href="css_styles_colors.html" class="waves-effect waves-light btn-small" title="Atribtuto 'src'"><i class="material-icons left">home</i>Styling HTML with CSS</a></li><br>
+          <li><a href="links.html" class="waves-effect waves-light btn-small" title="Atribtuto 'src'"><i class="material-icons left">home</i>HTML Links - Hyperlinks</a></li><br>
+          <li><a href="images.html" class="waves-effect waves-light btn-small" title="Atribtuto 'src'"><i class="material-icons left">home</i>HTML Imagens</a></li><br>
+          <li><a href="learning_list.html" class="waves-effect waves-light btn-small" title="Atribtuto 'src'"><i class="material-icons left">home</i>Conteúdo de Aprendizado</a></li><br>
         </ul>
       </nav>
 
