--- a/WebContent/w3school/index.html
+++ b/WebContent/w3school/index.html
@@ -35,29 +35,29 @@
       header {
         background-color: #666;
         padding: 30px;
-        text-align: cente;
+        text-align: center;
         font-size: 35px;
         color: white;
       }
       /* Create two columns/boxes that floats next to each other */
       nav {
         float: left;
-        witth: 60%;
+        witth: 30%;
         height: 800px; /* only for demonstration, should be removed */
         background: #8FBC8F;
-        padding: 10px;
+        padding: 20px;
       }
       /* Style the list inside the menu */
       nav ul {
         list-style-type: none;
-        padding: 90;
+        padding: 30;
       }
       article {
         float: left;
-        padding: 60px;
+        padding: 20px;
         width: 70%;
         background-color: #f1f1f1;
-        height: 400px; /* only for demonstration, should be removed */
+        height: 300px; /* only for demonstration, should be removed */
       }
       /* Clear floats after the columns */
       section: after{
@@ -73,7 +73,7 @@
         color: white;
       }
       /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
-      @media (max-width: 300px){
+      @media (max-width: 600px){
         nav, article {
           width: 100%;
           height: auto;
