--- a/WebContent/Prototipo/page-error.html
+++ b/WebContent/Prototipo/page-error.html
@@ -12,8 +12,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
   </head>
-  <div class="nav-wrapper">
-    <a href="#!" class="brand-logo">Study Management - Prototype</a>
   </div>
   <body>
     <div class="container">
@@ -26,7 +24,7 @@
 We'll be back soon.</p>
         </div>
         <div class="card-action">
-          <a href="menu.html">Return to Page Main</a>
+          <a href="index.html">Return to Page Main</a>
         </div>
       </div>
     </div>
