--- a/WebContent/Prototipo/main-page.html
+++ b/WebContent/Prototipo/main-page.html
@@ -9,16 +9,24 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
   </head>
   <div class="card-panel teal lighten-2"></div>
   <script type="text/javascript">
+  document.addEventListener('DOMContentLoaded', function() {
+    var elems = document.querySelectorAll('.carousel');
+    var instances = M.Carousel.init(elems, options);
+    var instance = M.Carousel.getInstance(elem);
+    instance.next(3);
+    instance.prev(3);
+    instance.set(3);
 
-document.addEventListener('DOMContentLoaded', function() {
-var elems = document.querySelectorAll('.dropdown-trigger');
-var instances = M.Dropdown.init(elems, options);
-});
+  });
+
+    document.addEventListener('DOMContentLoaded', function() {
+      var elems = document.querySelectorAll('.dropdown-trigger');
+      var instances = M.Dropdown.init(elems, options);
+    });
   </script>
   <body>
 
@@ -28,6 +36,15 @@ var instances = M.Dropdown.init(elems, options);
             </div>
           </nav>
     <div class="container">
+
+      <div class="carousel">
+    <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/250/250/nature/1"></a>
+    <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/250/250/nature/2"></a>
+    <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/250/250/nature/3"></a>
+    <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/250/250/nature/4"></a>
+    <a class="carousel-item" href="#five!"><img src="https://lorempixel.com/250/250/nature/5"></a>
+  </div>
+
 
       <div class="row">
         <!-- Campo para inserir usuário -->
@@ -52,5 +69,16 @@ var instances = M.Dropdown.init(elems, options);
       </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+    <!--  Scripts-->
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script>if (!window.jQuery) { document.write('<script src="bin/jquery-3.2.1.min.js"><\/script>'); }
+    </script>
+    <script src="docs/js/jquery.timeago.min.js"></script>
+    <script src="docs/js/prism.js"></script>
+    <script src="docs/js/lunr.min.js"></script>
+    <script src="docs/js/search.js"></script>
+    <script src="bin/materialize.js"></script>
+    <script src="docs/js/init.js"></script>
   </body>
 </html>
