--- a/WebContent/Prototipo/main-page.html
+++ b/WebContent/Prototipo/main-page.html
@@ -6,28 +6,17 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
    <!-- Compiled and minified JavaScript -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
     <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Let browser know website is optimized for mobile-->
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <!--Import materialize.css-->
+      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+
+      <link rel="stylesheet" href="css/custom.css">
 
   </head>
   <div class="card-panel teal lighten-2"></div>
-  <script type="text/javascript">
-  document.addEventListener('DOMContentLoaded', function() {
-    var elems = document.querySelectorAll('.carousel');
-    var instances = M.Carousel.init(elems, options);
-    var instance = M.Carousel.getInstance(elem);
-    instance.next(3);
-    instance.prev(3);
-    instance.set(3);
 
-  });
-
-    document.addEventListener('DOMContentLoaded', function() {
-      var elems = document.querySelectorAll('.dropdown-trigger');
-      var instances = M.Dropdown.init(elems, options);
-    });
-  </script>
   <body>
 
           <nav>
@@ -36,14 +25,13 @@
             </div>
           </nav>
     <div class="container">
-
       <div class="carousel">
     <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/250/250/nature/1"></a>
     <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/250/250/nature/2"></a>
     <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/250/250/nature/3"></a>
     <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/250/250/nature/4"></a>
     <a class="carousel-item" href="#five!"><img src="https://lorempixel.com/250/250/nature/5"></a>
-  </div>
+    </div>
 
 
       <div class="row">
@@ -51,7 +39,7 @@
         <div class="input-field col s12">
           <i class="material-icons prefix">perm_identity</i>
           <input id="login" type="text" class="validate">
-          <label for="login">Login"</label>
+          <label for="login">Login</label>
         </div>
         <!-- Campo para inserir senha-->
         <div class="input-field col s12">
@@ -67,18 +55,15 @@
           <a align="center" href="help-login.html" class="waves-effect waves-light">Log in options</a>
         </div>
       </div>
-
+    <!-- Jquery -->
+    <script src="https:q/ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- Materialize JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
-    <!--  Scripts-->
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script>if (!window.jQuery) { document.write('<script src="bin/jquery-3.2.1.min.js"><\/script>'); }
+    <script>
+    document.addEventListener('DOMContentLoaded', function() {
+  var elems = document.querySelectorAll('.carousel');
+  var instances = M.Carousel.init(elems, options);
+});
     </script>
-    <script src="docs/js/jquery.timeago.min.js"></script>
-    <script src="docs/js/prism.js"></script>
-    <script src="docs/js/lunr.min.js"></script>
-    <script src="docs/js/search.js"></script>
-    <script src="bin/materialize.js"></script>
-    <script src="docs/js/init.js"></script>
   </body>
 </html>
