Configuração css/html

--- a/WebContent/Prototipo/help.html
+++ b/WebContent/Prototipo/help.html
@@ -28,7 +28,9 @@
           </ul>
         </div>
       </nav>
-
+      <div class="container">
+        <div style="width:100%;height:0;padding-bottom:56%;position:relative;"><iframe src="https://giphy.com/embed/13sH3Qyz5asBva" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/end-users-programmers-13sH3Qyz5asBva">via GIPHY</a></p>
+      </div>
       <!-- Jquery -->
       <script src="https:q/ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
       <!-- Materialize JS -->
