--- a/WebContent/Prototipo/tests.html
+++ b/WebContent/Prototipo/tests.html
@@ -22,7 +22,7 @@
         <div class="nav-wrapper">
           <a href="main-page.html" class="brand-logo"><i class="material-icons">home</i>Home</a>
           <ul class="right hide-on-med-and-down">
-            <li><a class="waves-effect waves-light btn" href="#">Dashboard<i class="material-icons right">dashboard</i> </a></li>
+            <li><a class="waves-effect waves-light btn" href="./tests/Tsidnav.html">Test Sidnav<i class="material-icons right">dashboard</i> </a></li>
             <li><a class="waves-effect waves-light btn" href="#">Registration <i class="material-icons right">add_to_photos</i></a></li>
             <li><a class="waves-effect waves-light btn" href="help.html">Help<i class="material-icons right">add_to_photos</i></a></li>
           </ul>
