--- a/WebContent/Prototipo/main-page.html
+++ b/WebContent/Prototipo/main-page.html
@@ -16,45 +16,22 @@
 
   </head>
   <div class="card-panel teal lighten-2"></div>
-
+  <!-- NAVBAR -->
   <body>
 
-          <nav>
-            <div class="nav-wrapper">
-              <a class="brand-logo">Study Management - Main Page</a>
-            </div>
-          </nav>
-    <div class="container">
-      <div class="carousel">
-    <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/250/250/nature/1"></a>
-    <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/250/250/nature/2"></a>
-    <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/250/250/nature/3"></a>
-    <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/250/250/nature/4"></a>
-    <a class="carousel-item" href="#five!"><img src="https://lorempixel.com/250/250/nature/5"></a>
+<nav>
+    <div class="nav-wrapper">
+      <a href="main-page.html" class="brand-logo"><i class="material-icons">home</i>Home</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a class="waves-effect waves-light btn" href="#">Dashboard<i class="material-icons right">dashboard</i> </a></li>
+        <li><a class="waves-effect waves-light btn" href="#">Registration <i class="material-icons right">add_to_photos</i></a></li>
+        <li><a class="waves-effect waves-light btn" href="help.html">Help<i class="material-icons right">add_to_photos</i></a></li>
+        <li><a class="waves-effect waves-light btn" href="tests.html">Test<i class="material-icons right">add_to_photos</i></a></li>
+      </ul>
     </div>
+  </nav>
+    <div class="container">
 
-
-      <div class="row">
-        <!-- Campo para inserir usuário -->
-        <div class="input-field col s12">
-          <i class="material-icons prefix">perm_identity</i>
-          <input id="login" type="text" class="validate">
-          <label for="login">Login</label>
-        </div>
-        <!-- Campo para inserir senha-->
-        <div class="input-field col s12">
-          <i class="material-icons prefix">vpn_key</i>
-          <input id="password" type="password" class="validate">
-          <label for="password">Password</label>
-        </div>
-      </div>
-        <!-- Botão para entra no sistema -->
-        <div align="center">
-          <a align="center" class="waves-effect waves-light btn-large" href="main-page.html" title="Log in to the system">
-            <i class="material-icons right">send</i>Log in</a><br><br>
-          <a align="center" href="help-login.html" class="waves-effect waves-light">Log in options</a>
-        </div>
-      </div>
     <!-- Jquery -->
     <script src="https:q/ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Materialize JS -->
@@ -62,7 +39,7 @@
     <script>
     document.addEventListener('DOMContentLoaded', function() {
   var elems = document.querySelectorAll('.carousel');
-  var instances = M.Carousel.init(elems, options);
+    var instances = M.Carousel.init(elems, options);
 });
     </script>
   </body>
